<resources>
    <string name="app_name">MAXREFDES178#</string>
    <string name="file_operations">File Operations</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="settings_video">Video Settings</string>
    <string name="settings_audio">Audio Settings</string>
    <string name="settings_lcd">LCD Settings</string>
    <string name="face_id">Add Images to FaceID</string>
    <string name="test">Test</string>
    <string name="keyword_spotting">Keyword Spotting</string>
    <string name="settings">Settings</string>
    <string name="step1">Step 1:</string>
    <string name="choose_the_file_to_send">Choose the file to send</string>
    <string name="select_file">Select File</string>
    <string name="file_selected">File Selected:</string>
    <string name="step2">Step 2:</string>
    <string name="send_the_file_when_ready">Send the file when ready</string>
    <string name="send_file">Send File</string>
    <string name="send">Send</string>
    <string name="shut_down_device">Shut Down Device</string>
    <string name="restart_device">Restart Device</string>
    <string name="choose_a_file">Choose a file</string>
    <string name="no_file_is_selected">No file is selected</string>
    <string name="content">Content</string>
    <string name="get_the_file_content_from_device">Get the file content from device</string>
    <string name="get_content">Get Content</string>
    <string name="review_the_file_system">Review the file system</string>
    <string name="get_file">Get File</string>
    <string name="step3">Step 3:</string>
    <string name="show_file_content">Show File Content</string>
    <string name="enter_demo">Enter Demo</string>
    <string name="capture_image_from_device">Capture Image From Device</string>
    <string name="send_image_from_mobile">Send Image From Mobile</string>
    <string name="other_operations">Other Operations</string>
    <string name="select_debugger">Second Debug Channel</string>
    <string name="select_camera_clock">Camera Clock</string>
    <string name="read_manufacturer_name">Read Manufacturer Name</string>
    <string name="read_serial_number">Read Serial Number</string>
    <string name="load_image">Load Image</string>
    <string name="send_test_bytes">Send Test Bytes</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="no_saved_scenarios">There are no saved scenarios.</string>
    <string name="select">Select</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="enter_a_scenario_name">Enter a scenario name</string>
    <string name="new_scenario">New Scenario</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="input_params">Input Params</string>
    <string name="layer_config">Layer Config</string>
    <string name="output_params">Output Params</string>
    <string name="configure_the_input_parameters">Configure the input parameters</string>
    <string name="image_source">Image Source</string>
    <string name="image_size">Image Size</string>
    <string name="i_agree">I Agree</string>

    <string-array name="image_sources">
        <item>Onboard Camera</item>
        <item>File System</item>
        <item>Android</item>
    </string-array>
    <string-array name="image_sizes">
        <item>120 x 160</item>
        <item>240 x 320</item>
    </string-array>
    <string-array name="image_outputs">
        <item>Onboard LCD</item>
        <item>File System</item>
        <item>Android</item>
    </string-array>

    <string name="configure_the_layers">Configure the layers</string>
    <string name="select_configuration">Select Configuration</string>
    <string name="details_of_selected_configuration">Details of selected configuration:</string>
    <string name="configure_where_the_output_will_be_fed">Configure where the output will be fed</string>
    <string name="image_output">Image Output</string>
    <string name="update_device">Update Device</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="demo">Demo</string>
    <string name="review_the_parameters">Review the parameters</string>
    <string name="run_the_demo_and_evaluate_the_results">Run the demo and evaluate the results</string>
    <string name="select_image">Select Image</string>
    <string name="run_demo">Run Demo</string>
    <string name="save_scenario">Save Scenario</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_to_delete_it">Are you sure you want to delete it?</string>
    <string name="are_you_sure_to_shut_device_down">Are you sure you want to shut down the device?</string>
    <string name="are_you_sure_to_restart_device">Are you sure you want to restart the device?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="new_person">New Person</string>
    <string name="are_you_sure_to_send_signature">Are you sure you want to upload this signature? \nThis operation will overwrite current configuration on device.</string>
    <string name="photo_help_title">FaceID Photo Guidelines</string>
    <string name="photo_help_content">
        " 1. Make sure the subject's face is well illuminated.\n"
        "2. Photos should be passport style, with subject's face covering about 60-70% of the area.\n"
        "3. Use a light color background; make sure it is not underexposed, and there is no shadow in the background or face.\n"
        "4. Take one photo with each of the following poses, total of 6-8 photos:\n"
        "  a) Facing directly to the camera (1 photo)\n"
        "  b) Tilting face slightly (5-10 degree) to right, left, up and down, but still looking at the camera (4 photos)\n"
        "  c) Zoomed out face directly to the camera covering about 20-30% of the area (1 photo):\n"
        "5. You may add additional photos with facial expressions (eg. smile) directly facing to the camera, similar to 4-a. (1-2 photos)"
    </string>
    <string name="enter_a_person_name">Enter a person name</string>
    <string name="person_name_exists">The person name already exists!</string>
    <string name="person_created_success">Person created successfully!</string>
    <string name="person_is_renamed">The person has been renamed.</string>
    <string name="database_name_exists">The database name already exists!</string>
    <string name="database_is_deleted">The database has been deleted.</string>
    <string name="person_is_deleted">The person has been deleted.</string>
    <string name="database_is_renamed">The database has been renamed.</string>
    <string name="enter_a_database_name">Enter a database name</string>
    <string name="new_database">New Database</string>
    <string name="rename_database">Rename Database</string>
    <string name="rename_person">Rename Person</string>
    <string name="rename">Rename</string>
    <string name="change">Change</string>
    <string name="no_available_databases">There is no database available.</string>
    <string name="no_available_people">There is no person available.</string>
    <string name="db_selection">DB Selection</string>
    <string name="db_edit">DB Edit</string>
    <string name="create_signature_text">Click the button below to generate a signature using the selected FaceID database. Please click once and wait, signature generation might take a while.</string>
    <string name="send_signature_text">Click the button below to send the signature to the device.</string>
    <string name="signature_not_found">Signature has not been generated yet</string>
    <string name="script_in_progress">Signature generation is in progress...</string>
    <string name="create_signature">Generate Signature</string>
    <string name="upload_signature">Upload Signature</string>
    <string name="upload_default_signature">Upload Default Signature</string>
    <string name="command_operation">Command Operation</string>
    <string name="signature_created_at">Generated Date: %1$s</string>
    <string name="signature_update_success">Signature updated is successful.</string>
    <string name="signature_update_fail">Signature update is failed!</string>
    <string name="signature_create_fail">Signature can not be generated!</string>
    <string name="face_id_demo">Generate/Upload Signature</string>
    <string name="info">Info</string>
    <string name="OK">OK</string>
    <string name="app_firmware_versions_different">Android application version and device firmware version is different. Actions you\'ll take may corrupt the device!</string>
    <string name="signature_generated">Signature Generated!</string>
    <string name="face_detection_results">Face Detection Results: </string>
    <string name="signature_detaction_information">Only detected photos are embedded in the signature file. You can edit non detected photos on the previous page.</string>
    <string name="previous_page">Previous Page</string>
</resources>
