<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".face.DbEditFragment">

    <com.maximintegrated.maxcamandroid.view.HorizontalStepperView
        android:id="@+id/stepperView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="8dp"
        app:currentStep="second"
        app:enableBackButton="true"
        app:enableNextButton="true"
        app:firstStepDescription="@string/db_selection"
        app:firstStepNumber="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:secondStepDescription="@string/db_edit"
        app:secondStepNumber="2"
        app:stepperProgress="66"
        app:thirdStepDescription="@string/demo"
        app:thirdStepNumber="3" />

</androidx.constraintlayout.widget.ConstraintLayout>