<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".faceId.FaceIdLayerConfigFragment">

    <com.google.android.material.card.MaterialCardView
        style="@style/SectionCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/stepperView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/selectionImageView"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/face_id_demo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/layersTextView"
                    style="@style/CardViewBoldTextView"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/configure_the_layers"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/selectionImageView" />

                <TextView
                    android:id="@+id/configurationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="@string/select_configuration"
                    app:layout_constraintBottom_toBottomOf="@id/configurationSpinner"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/configurationSpinner" />

                <Spinner
                    android:id="@+id/configurationSpinner"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="@android:drawable/editbox_background_normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/configurationTextView"
                    app:layout_constraintTop_toBottomOf="@id/layersTextView" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_arrow_down"
                    app:layout_constraintBottom_toBottomOf="@id/configurationSpinner"
                    app:layout_constraintEnd_toEndOf="@id/configurationSpinner"
                    app:layout_constraintTop_toTopOf="@id/configurationSpinner" />

                <TextView
                    android:id="@+id/configurationDetailsTitleTextView"
                    style="@style/CardViewBoldTextView"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/details_of_selected_configuration"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/configurationTextView" />

                <TextView
                    android:id="@+id/configurationDetailsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/configurationDetailsTitleTextView"
                    tools:text="Input Neurons: 160\nHiddenNeurons: [256 512 256]\nOutput Neurons: 32" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </com.google.android.material.card.MaterialCardView>


    <com.maximintegrated.maxcamandroid.view.HorizontalStepperView
        android:id="@+id/stepperView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:currentStep="second"
        app:firstStepDescription="@string/input_params"
        app:firstStepNumber="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:secondStepDescription="@string/layer_config"
        app:secondStepNumber="2"
        app:stepperProgress="40"
        app:thirdStepDescription="@string/output_params"
        app:thirdStepNumber="3" />

</androidx.constraintlayout.widget.ConstraintLayout>