<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".faceId.FaceIdOutputParamsFragment">

    <com.google.android.material.card.MaterialCardView
        style="@style/SectionCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/stepperView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/selectionImageView"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/face_id_demo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/outputParametersTextView"
                    style="@style/CardViewBoldTextView"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/configure_where_the_output_will_be_fed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/selectionImageView" />

                <TextView
                    android:id="@+id/imageOutputTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="@string/image_output"
                    app:layout_constraintBottom_toBottomOf="@id/imageOutputSpinner"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/imageOutputSpinner" />

                <Spinner
                    android:id="@+id/imageOutputSpinner"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="@android:drawable/editbox_background_normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageOutputTextView"
                    app:layout_constraintTop_toBottomOf="@id/outputParametersTextView" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_arrow_down"
                    app:layout_constraintBottom_toBottomOf="@id/imageOutputSpinner"
                    app:layout_constraintEnd_toEndOf="@id/imageOutputSpinner"
                    app:layout_constraintTop_toTopOf="@id/imageOutputSpinner" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </com.google.android.material.card.MaterialCardView>


    <com.maximintegrated.maxcamandroid.view.HorizontalStepperView
        android:id="@+id/stepperView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:currentStep="second"
        app:firstStepDescription="@string/layer_config"
        app:firstStepNumber="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:secondStepDescription="@string/output_params"
        app:secondStepNumber="3"
        app:stepperProgress="60"
        app:thirdStepDescription="@string/update_device"
        app:thirdStepNumber="4" />

</androidx.constraintlayout.widget.ConstraintLayout>