<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".faceId.FaceIdUpdateDeviceFragment">

    <com.google.android.material.card.MaterialCardView
        style="@style/SectionCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/stepperView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/selectionImageView"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/face_id_demo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/reviewParametersTextView"
                    style="@style/CardViewBoldTextView"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/review_the_parameters"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/selectionImageView" />

                <TextView
                    android:id="@+id/parametersTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/reviewParametersTextView"
                    tools:text="Image Source: Onboard LCD\nImage Size: 120 x 160\nLayer Configuration: LayerConfig2.cfg\nImage Output: Onboard LCD" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveScenarioButton"
                    style="@style/MaximOutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/save_scenario"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/parametersTextView" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/updateDeviceButton"
                    style="@style/MaximOutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/update_device"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/saveScenarioButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </com.google.android.material.card.MaterialCardView>


    <com.maximintegrated.maxcamandroid.view.HorizontalStepperView
        android:id="@+id/stepperView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:currentStep="second"
        app:firstStepDescription="@string/output_params"
        app:firstStepNumber="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:secondStepDescription="@string/update_device"
        app:secondStepNumber="4"
        app:stepperProgress="80"
        app:thirdStepDescription="@string/demo"
        app:thirdStepNumber="5" />

</androidx.constraintlayout.widget.ConstraintLayout>